kubernetes/bookstack/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: trayla
  name: bookstack-p
spec:
  selector:
    matchLabels:
      app: bookstack
      env: p
  replicas: 1
  template:
    metadata:
      labels:
        app: bookstack
        env: p
    spec:
      containers:
      - image: linuxserver/mariadb
        name: database
        volumeMounts:
          - name: data
            mountPath: /config
      - image: linuxserver/bookstack
        name: bookstack
        volumeMounts:
          - name: data
            mountPath: /config       
        ports:
        - name: http
          containerPort: 80
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bookstack-p
