kubernetes/bookstack/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: trayla
  name: bookstack-p
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - bookstack.trayla.net
    secretName: letsencrypt-staging
  rules:
  - host: bookstack.trayla.net
    http:
      paths:
      - path: /
        backend:
          serviceName: bookstack-p
          servicePort: 80
